package={name='music-player', version='0.0.0', authors=['Matthias Fauconneau <matthias.fauconneau@gmail.com>'], edition= '2024'}
build-dependencies={wgsl = {git='https://github.com/Matthias-Fauconneau/ui'}}

[dependencies]
fehler='*'
rustix={version='*', features=['fs','event','mm']}
parking_lot='*'

symphonia={features= ['flac'], version='*'}

num={git='https://github.com/Matthias-Fauconneau/num'}
realfft='*'

ui={git='https://github.com/Matthias-Fauconneau/ui', optional=true}
vulkano={git='https://github.com/vulkano-rs/vulkano', default-features=false, features=['macros'], optional=true}
vulkano-spirv={git='https://github.com/Matthias-Fauconneau/vulkano-spirv', optional=true}
bytemuck={version='*', optional=true}

[features]
resample=[]
ui=['dep:ui', 'dep:vulkano', 'dep:vulkano-spirv', 'dep:bytemuck']
default=['ui']