package={name='music-player', version='0.0.0', authors=['Matthias Fauconneau <matthias.fauconneau@gmail.com>'], edition= '2024'}
build-dependencies={wgsl = {git='https://github.com/Matthias-Fauconneau/ui'}}

[dependencies]
fehler='*'
rustix={version='*', features=['fs','event','mm']}
parking_lot='*'

symphonia={features= ['flac'], version='*'}

num={git='https://github.com/Matthias-Fauconneau/num'}
realfft='*'

ui={git='https://github.com/Matthias-Fauconneau/ui'}
vulkano={git='https://github.com/vulkano-rs/vulkano', default-features=false, features=['macros']}
vulkano-spirv={git='https://github.com/Matthias-Fauconneau/vulkano-spirv'}
bytemuck='*'

[features]
resample=[]

[patch.'https://github.com/vulkano-rs/vulkano']
vulkano={ git='https://github.com/Matthias-Fauconneau/vulkano' } # drm modifier fix

[patch.'https://github.com/Matthias-Fauconneau/ui']
ui={ path = '../ui' }